--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".NovoUsuarioActivity"
     android:orientation="vertical">
+    <ImageView
+        android:onClick="tirarFoto"
+        android:layout_gravity="end"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_camera"/>
     <EditText
         android:id="@+id/loginNovoUsuarioEditText"
         android:layout_width="match_parent"
@@ -33,4 +41,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@android:string/ok"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="12dp"
+        android:elevation="8dp"
+        android:background="@color/cardview_light_background"
+        android:layout_margin="20dp">
+        <ImageView
+            android:id="@+id/pictureImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
